--- a/_layouts/home-en.html
+++ b/_layouts/home-en.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="home">
-    <h3>Language All | <a href="/id">ID</a> | <a href="/en">EN</a></h3>
+    <h3>Language English | <a href="/id">ID</a> | <a href="/">All</a></h3>
 
   {{ content }}
 
@@ -11,6 +11,7 @@ layout: default
     <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
     <ul class="post-list">
       {%- for post in site.posts -%}
+      {%- if post.category=="en" -%}
       <li>
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
         <span class="post-meta">{{ post.date | date: date_format }}</span>
@@ -23,6 +24,7 @@ layout: default
           {{ post.excerpt }}
         {%- endif -%}
       </li>
+      {%- endif -%}
       {%- endfor -%}
     </ul>
 
