--- a/_layouts/home-en.html
+++ b/_layouts/home-en.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="home">
-    <h3>Language English | <a href="/id">ID</a> | <a href="/">All</a></h3>
+    <h3 align="right">Language English | <a href="/id">ID</a> | <a href="/">All</a></h3>
 
   {{ content }}
 
