--- a/_layouts/home-id.html
+++ b/_layouts/home-id.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="home">
-  <h3>Language Indonesian | <a href="/en">EN</a> | <a href="/">All</a></h3>
+  <h3 align="right">Language Indonesian | <a href="/en">EN</a> | <a href="/">All</a></h3>
 
   {{ content }}
 
