--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="home">
-    <h3>Language All | <a href="/id">ID</a> | <a href="/en">EN</a></h3>
+    <h3 align="right">Language All | <a href="/id">ID</a> | <a href="/en">EN</a></h3>
 
   {{ content }}
 
