--- a/_layouts/home-id.html
+++ b/_layouts/home-id.html
@@ -20,9 +20,7 @@ layout: default
             {{ post.title | escape }}
           </a>
         </h3>
-        {%- if site.show_excerpts -%}
-          {{ post.excerpt }}
-        {%- endif -%}
+        {{ post.content | strip_html | truncatewords: 50 }}
       </li>
       {%- endif -%}
       {%- endfor -%}
