--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,9 +19,7 @@ layout: default
             {{ post.title | escape }}
           </a>
         </h3>
-        {%- if site.show_excerpts -%}
-          {{ post.excerpt }}
-        {%- endif -%}
+        {{ post.content | strip_html | truncatewords: 50 }}
       </li>
       {%- endfor -%}
     </ul>
